--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ defusedxml==0.5.0
 dj-database-url==0.5.0
 Django==2.1.5
 django-allauth==0.38.0
+django-heroku==0.3.1
 django-widget-tweaks==1.4.3
 djangorestframework==3.9.0
 gunicorn==19.9.0
